# NWAlignment

./: .gitignore  README.md
Code/: CMakeLists.txt  alignment.cpp  alignment.h  main.cpp  matrix.h  nucleotide.cpp  nucleotide.h  sequence.cpp  sequence.h
Code/FASTA/: reader.cpp  reader.h  writer.cpp  writer.h
Data/: input.fa  output.align
